Agrego feature de notificaciones - ahora el usuario recibe notificaciones cada vez que hay un cambio en la fecha/lugar del evento

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -16,6 +16,8 @@
             <a href="{% url 'ticket_list' %}" class="boton">Tickets</a>
             <a href="{% url 'comentarios_organizador' %}"class="boton">Comentarios</a>
             <a href="{% url 'manage_refunds' %}" class="boton">Reembolsos</a>
+            <a href="{% url 'notifications' %}" class="boton">Notificaciones</a>
+            
         </div>
     </div>
 </div>
