Cambio en test_e2e_entradas y test_event, agregando la vista del error en el form

--- a/app/templates/app/event/event_form.html
+++ b/app/templates/app/event/event_form.html
@@ -58,6 +58,9 @@
                                     name="scheduled_at"
                                     value="{{ form.scheduled_at.value|default:''|date:'Y-m-d\TH:i' }}"
                                     required>
+                                    <div class="text-danger mt-1">
+                                        {{ form.scheduled_at.errors }}
+                                    </div>
                                 </div>
                             </div>
                             <div>
